feat: Geolocation Table / API spec
