# service-gateway/pkg/generated/swagger/rest_server/rest_api/geolocation/add_parameters.go
@@ -1,0 +1,70 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package geolocation
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/runtime/middleware"
+
+	rest_model "github.com/1ambda/go-ref/service-gateway/pkg/generated/swagger/rest_model"
+)
+
+// NewAddParams creates a new AddParams object
+// no default values defined in spec.
+func NewAddParams() AddParams {
+
+	return AddParams{}
+}
+
+// AddParams contains all the bound params for the add operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters add
+type AddParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*
+	  In: body
+	*/
+	Body *rest_model.Geolocation
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewAddParams() beforehand.
+func (o *AddParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	if runtime.HasBody(r) {
+		defer r.Body.Close()
+		var body rest_model.Geolocation
+		if err := route.Consumer.Consume(r.Body, &body); err != nil {
+			res = append(res, errors.NewParseError("body", "body", "", err))
+		} else {
+
+			// validate body object
+			if err := body.Validate(route.Formats); err != nil {
+				res = append(res, err)
+			}
+
+			if len(res) == 0 {
+				o.Body = &body
+			}
+		}
+	}
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
