# service-gateway/pkg/generated/swagger/rest_server/rest_api/geolocation/add_responses.go
@@ -1,0 +1,116 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package geolocation
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	rest_model "github.com/1ambda/go-ref/service-gateway/pkg/generated/swagger/rest_model"
+)
+
+// AddCreatedCode is the HTTP code returned for type AddCreated
+const AddCreatedCode int = 201
+
+/*AddCreated Created
+
+swagger:response addCreated
+*/
+type AddCreated struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *rest_model.Geolocation `json:"body,omitempty"`
+}
+
+// NewAddCreated creates AddCreated with default headers values
+func NewAddCreated() *AddCreated {
+
+	return &AddCreated{}
+}
+
+// WithPayload adds the payload to the add created response
+func (o *AddCreated) WithPayload(payload *rest_model.Geolocation) *AddCreated {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the add created response
+func (o *AddCreated) SetPayload(payload *rest_model.Geolocation) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *AddCreated) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(201)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*AddDefault error
+
+swagger:response addDefault
+*/
+type AddDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *rest_model.Error `json:"body,omitempty"`
+}
+
+// NewAddDefault creates AddDefault with default headers values
+func NewAddDefault(code int) *AddDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &AddDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the add default response
+func (o *AddDefault) WithStatusCode(code int) *AddDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the add default response
+func (o *AddDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the add default response
+func (o *AddDefault) WithPayload(payload *rest_model.Error) *AddDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the add default response
+func (o *AddDefault) SetPayload(payload *rest_model.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *AddDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
